First draft of Syllabus with Content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 <title>COM550 Producing Interactive Media</title>
+<link href="styles.css" rel="stylesheet">
 
 </head>
 
@@ -12,6 +13,8 @@
 
 <h1>COM550 Producing Interactive Media</h1>
 
+<p><a href="com550syllabus.html">COM550 Syllabus</a></p>
+
 <h2>Important Resources</h2>
 
 <ul>
@@ -20,6 +23,19 @@
 </ul>
 
 <h3>Getting Started with Git &amp; Github</h3>
+
+<h3>Javascript</h3>
+<ul>
+<li>Codecademy</li>
+<li>Mozilla Developer Network (MDN)</li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN Javascript Guide</a></li>
+</ul>
+
+<h3>Tools</h3>
+<ul>
+<li>Alfred</li>
+<li>
+</ul>
 
 </div>
 
