--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <p><a href="com550syllabus.html">COM550 Syllabus</a></p>
 
 <h2>Important Resources</h2>
-
-<ul>
-<li><a href="https://github.com/EloniMedia/im-producing/wiki" target="_blank">Course syllabus (Github wiki format)</a></li>
+<p>coming soon...</p>
+<!-- <ul>
+<li><a href="https://github.com/EloniMedia/im-producing/wiki" target="_blank">Course wiki on Github</a></li>
 <li><a href="com550bibliography.html">Course Bibliography</a>
 </ul>
 
@@ -34,8 +34,7 @@
 <h3>Tools</h3>
 <ul>
 <li>Alfred</li>
-<li>
-</ul>
+</ul> -->
 
 </div>
 
