Big push of new materials

--- a/com550syllabus.html
+++ b/com550syllabus.html
@@ -48,11 +48,11 @@ by appointment with 24 hour advance notice</p>
 <h3>Grade Distribution</h3>
 
 <table>
-<tr><td><strong>Quizzes:</strong></td><td>200 points</td></tr>
+<tr><td><strong>Quizzes:</strong></td><td>100 points</td></tr>
 <tr><td><strong>Field Guide:</strong> </td><td>100 points</td></tr>
 <tr><td><strong>Midterm Project:</strong> </td><td>200 points</td></tr>
 <tr><td><strong>Final Project:</strong></td><td> 300 points</td></tr>
-<tr><td><strong>Assignments:</strong> </td><td>100 points</td></tr>
+<tr><td><strong>Assignments:</strong> </td><td>200 points</td></tr>
 <tr><td><strong>Participation:</strong> </td><td><u>100 points</u></td></tr>
 <tr><td>&nbsp;</td><td><strong>1000 total points</strong></td></tr>
 </table>
@@ -76,7 +76,7 @@ F = Fail (&lt; 70%)</p>
 
 <dl>
 <dt>Class Blog</dt>
-<dd>You should sign up for a blog on <a href="http://wordpress.com" target="_blank">wordpress.com</a>. You can use a blog you already maintain for another class or you can start a new one specific to this class. Either way, please create a category called <strong>Producing Interactive Media</strong> and post anything related to this class in that category.</dd>
+<dd>Please sign up for a blog on <a href="http://wordpress.com" target="_blank">wordpress.com</a>. You can use a blog you already maintain for another class or you can start a new one specific to this class. Either way, please create a category called <strong>Producing Interactive Media</strong> and post anything related to this class in that category.</dd>
 <dt>Social Coding Accounts</dt>
 <dd>Please sign up for <a href="http://twitter.com" target="_blank">Twitter (must be a public account)</a>, then proceed to <a href="http://github.com" target="_blank">Github</a> and sign up for an account there. Once you've done this, please sign up for an account on <a href="http://codepen.io">Codepen</a>. When you're finished, please send a request to me to join this Github project: <a href="https://github.com/EloniMedia/im-producing" target="_blank">im-producing</a>. Once approved, you can edit the wiki and create </dd>
 <dt>Quizzes</dt>
@@ -86,20 +86,7 @@ F = Fail (&lt; 70%)</p>
 <dd>Quiz 03: October 28, 2014</dd>
 <dd>Quiz 04: November 18, 2014</dd>
 <dt>Field Guides</dt>
-<dd>Field Guides are intended to be a chance for you to explore in-depth a concept or a trend in interactive media and web development that is currently shaping the field and will continue to do so in the next five years. You will be asked to present for 8 to 10 minutes on a <em>topic of your choice</em> from the <a href="topiclist.html">list of approved topics</a>.</dd>
-<dd>As part of your presentation, please address the following questions:
-<ol>
-<li>What is the technology?</li>
-<li>Who invented it and how did it emerge?</li>
-<li>Provide a basic timeline or history of the technology.</li>
-<li>What is the technology intended to do?</li>
-<li>How is the technology currently being utilized?</li>
-<li>What is the future of this technology?</li>
-<li>What other technologies are similar to this one?</li>
-<li>Provide <em>at least five</em> resources that would serve as a good starting point for someone to learn more about this.</li>
-<li>Provide three code samples of how someone could get started with this technology to do something useful or practical at the beginner level.</li>
-<li>Cite <strong>all</strong> sources of information, code, and references to your research.</li>
-</ol>
+<dd>Field Guides are intended to be a chance for you to explore in-depth a concept or a trend in interactive media and web development that is currently shaping the field and will continue to do so in the next five years. For more, reference <a href="fieldguiderubric.html">the Field Guide Rubric and schedule</a> to learn about topics to be explored.
 </dd>
 <dt>Codecademy</dt>
 <dd>Codecademy will be utilized as a tool to help you understand the basics of programming with Javascript. </dd>
@@ -166,84 +153,86 @@ F = Fail (&lt; 70%)</p>
 
 <hr class="spacer">
 
+<h4>Supplemental readings mentioned in class:</h4>
+<p><a href="benjamin-unpacking-library.pdf">Walter Benjamin, "Unpacking My Library"</a> and <a href="benjamin-work-in-the-age.pdf">Walter Benjamin, "The Work of Art in the Age of Mechanical Reproduction."</a></p>
+
+<hr class="spacer">
+
 <h4>003: September 02, 2014</h4>
 <div><h5>Objectives</h5>
 <p>Javascript</p></div>
 <div><h5>In-Class</h5><p>Codecademy: Javascript 1</p></div>
 <div><h5>Reading Due</h5>
-<p>Murray, <a href="murray-inventingthemedium-ch1.pdf">Chapter 1 [PDF]</a> and <a href="murray-inventingthemedium-ch2.pdf">Chapter 2</a></p>
+<p>Murray, <a href="murray-inventingthemedium-ch1.pdf">Introduction (not Ch. 1) [PDF]</a> and <a href="murray-inventingthemedium-ch2.pdf">Chapter 2</a></p>
 <p>Speaking Javascript, Chapters <a href="http://speakingjs.com/es5/ch04.html" target="_blank">4</a>, <a href="http://speakingjs.com/es5/ch05.html" target="_blank">5</a>, <a href="http://speakingjs.com/es5/ch06.html" target="_blank">6</a>, <a href="http://speakingjs.com/es5/ch03.html" target="_blank">3</a> &amp; <a href="http://speakingjs.com/es5/ch02.html" target="_blank">2</a> (in that order)</p></div>
 <div><h5>Assignment Due</h5>
-<p>Three questions about the readings. These should be open-ended questions to prompt discussion in class. Post these to your blog.</p></div>
+<p>Three questions about the readings (bring to class in any form). These should be open-ended questions to prompt discussion in class.</p></div>
 
 <hr class="spacer">
 
 <h4>004: September 04, 2014</h4>
 <div><h5>Objectives</h5>
-<p>Javascript</p></div>
+<p>Javascript Fundamentals</p></div>
 <div><h5>In-Class</h5>
 <p>Codecademy: Javascript 2</p></div>
-<div><h5>Reading Due</h5></div>
+<div><h5>Reading Due</h5><p>TBA</p></div>
 <div><h5>Assignment Due</h5>
-<p>Analyze one interactive experience in depth. Post to your blog.</p></div>
+<p>Finish "Getting Started" sequence &amp; Finish "Choose Your Own Adventure" sequence in Codecademy</p>
+<p>Analyze one of the interactive experiences you wrote about on your first blog post in-depth according to the Four Affordances outlined by Janet Murray in Chapter 2 of Inventing the Medium. Post this analysis to your blog. (~500 words (but I'm not counting), describing how each of the affordances is involved in the particular experience.)</p></div>
 
 <hr class="spacer">
 
 <h4>005: September 09, 2014</h4>
 <div><h5>Objectives</h5>
 <p>Javascript</p></div>
-<div><h5>In-Class</h5><p>Codecademy: Javascript 3</p></div>
-<div><h5>Reading Due</h5></div>
-<div><h5>Assignment Due</h5></div>
+<div><h5>In-Class</h5><p>Codecademy: Functions Review &amp; Javascript 3</p></div>
+<div><h5>Reading Due</h5><p>Gliffy's <a href="https://www.gliffy.com/examples/index.php" target="_blank">different types of charts</a>. Also, <a href="http://users.csc.calpoly.edu/~jdalbey/SWE/pdl_std.html" target="_blank">pseudocode</a>. Also, Murray Chapter 2 (link above) pp. 80 - 82 related to pseudocode. And finally, <a href="http://speakingjs.com/es5/ch07.html" target="_blank">Chapter 7 in Speaking Javascript.</a></p></div>
+<div><h5>Assignment Due</h5><p>Codecademy "Functions"</div>
 
 <hr class="spacer">
 
 <h4>006: September 11, 2014</h4>
-<div><h5>Objectives</h5>
-<p>Javascript</p></div>
-<div><h5>In-Class</h5>
-<p><strong>Field Guide: JSON</strong></p></div>
-<div><h5>Reading Due</h5></div>
-<div><h5>Assignment Due</h5><p>Codecademy 4: jQuery 1</p></div>
+<div><h5>Objectives</h5><p>Control Structures and Introduction to Object Oriented Programming</p>
+</div>
+<div><h5>In-Class</h5><p>Working with JS in-browser.</p></div>
+<div><h5>Reading Due</h5><p><a href="DOMScripting-ch2ch3.pdf">Chapters 2 &amp; 3 in DOM Scripting (Keith).</a></p></div>
+<div><h5>Assignment Due</h5><p>1. Codecademy: For Loops; While Loops; Control Flow. (You may skip the practice exercises "Search Text" and "Dragon Slayer".)<br>2. Flowchart and pseudocode Tic-Tac-Toe (on paper, bring to class).</p></div>
 
 <hr class="spacer">
 
 <h4>007: September 16, 2014</h4>
 <div><h5>Objectives</h5>
-<p></p></div>
-<div><h5>In-Class</h5>
-<p><strong>Field Guide: Hands-free interfaces (Kinect, Leapmotion, etc.)</strong></p></div>
+<p>Javascript Objects &amp; Properties</p></div>
+<div><h5>In-Class</h5><p>Objects</p></div>
 <div><h5>Reading Due</h5></div>
-<div><h5>Assignment Due</h5><p>Codecademy 5: jQuery 2</p></div>
+<div><h5>Assignment Due</h5><p>Codecademy: Choose Your Own Adventure 2; Arrays and Objects; Contact List; Intro to Objects I</p></div>
 
 <hr class="spacer">
 
 <h4>008: September 18, 2014</h4>
 <div><h5>Objectives</h5>
-<p></p></div>
-<div><h5>In-Class</h5><p>Adobe Edge Animate</p>
-<p><strong>Field Guide: Adobe Flash</strong></p></div>
+<p>jQuery &amp; Edge Animate</p></div>
+<div><h5>In-Class</h5><p>Adobe Edge Animate</p></div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5>
-<p>Codecademy 4: jQuery 1</p></div>
+<p>Codecademy: jQuery 1</p></div>
 
 <hr class="spacer">
 
 <h4>009: September 23, 2014</h4>
 <div><h5>Objectives</h5>
-<p></p></div>
+<p>jQuery &amp; Edge Animate</p></div>
 <div><h5>In-Class</h5><p>Adobe Edge Animate</p>
-<p><strong>Field Guide: Actionscript</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
-<div><h5>Assignment Due</h5></div>
+<div><h5>Assignment Due</h5><p>Codecademy: jQuery 2</p></div>
 
 <hr class="spacer">
 
 <h4>010: September 25, 2014</h4>
 <div><h5>Objectives</h5>
-<p></p></div>
-<div><h5>In-Class</h5><p>Adobe Edge Animate</p>
-<p><strong>Field Guide: SVG</strong></p></div>
+<p>Adobe Edge Animate</p></div>
+<div><h5>In-Class</h5><p>Adobe Edge Animate</p></div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 
@@ -251,9 +240,9 @@ F = Fail (&lt; 70%)</p>
 
 <h4>011: September 30, 2014</h4>
 <div><h5>Objectives</h5>
-<p></p></div>
+<p>Adobe Edge Animate</p></div>
 <div><h5>In-Class</h5><p>Adobe Edge Animate</p>
-<p><strong>Field Guide: HTML5 Canvas</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 
@@ -261,9 +250,8 @@ F = Fail (&lt; 70%)</p>
 
 <h4>012: October 2, 2014</h4>
 <div><h5>Objectives</h5>
-<p></p></div>
-<div><h5>In-Class</h5><p>Adobe Edge Animate</p>
-<p><strong>Field Guide: HTML5 Audio</strong></p></div>
+<p>Adobe Edge Animate</p></div>
+<div><h5>In-Class</h5><p>Adobe Edge Animate</p></div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 
@@ -271,9 +259,9 @@ F = Fail (&lt; 70%)</p>
 
 <h4>013: October 7, 2014</h4>
 <div><h5>Objectives</h5>
-<p></p></div>
+<p>Adobe Edge Animate</p></div>
 <div><h5>In-Class</h5><p>Adobe Edge Animate</p>
-<p><strong>Field Guide: HTML5 Video</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 
@@ -293,11 +281,13 @@ F = Fail (&lt; 70%)</p>
 <h4 class="centeralign">MIDTERM BREAK: NO CLASS OCTOBER 14</h4>
 <hr class="spacer">
 
+<h3>After fall break: Server-side technologies, Wordpress customization, PHP, and project development</h3>
+
 <h4>015:</h4>
 <div><h5>Objectives</h5>
 <p></p></div>
 <div><h5>In-Class</h5>
-<p><strong>Field Guide: Drupal</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
@@ -306,7 +296,7 @@ F = Fail (&lt; 70%)</p>
 <div><h5>Objectives</h5>
 <p></p></div>
 <div><h5>In-Class</h5>
-<p><strong>Field Guide: Ruby on Rails</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
@@ -315,7 +305,7 @@ F = Fail (&lt; 70%)</p>
 <div><h5>Objectives</h5>
 <p></p></div>
 <div><h5>In-Class</h5>
-<p><strong>Field Guide: Node.js</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
@@ -324,7 +314,7 @@ F = Fail (&lt; 70%)</p>
 <div><h5>Objectives</h5>
 <p></p></div>
 <div><h5>In-Class</h5>
-<p><strong>Field Guide: AJAX &amp; XML</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
@@ -333,7 +323,7 @@ F = Fail (&lt; 70%)</p>
 <div><h5>Objectives</h5>
 <p></p></div>
 <div><h5>In-Class</h5>
-<p><strong>Field Guide: WebRTC</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
@@ -342,7 +332,7 @@ F = Fail (&lt; 70%)</p>
 <div><h5>Objectives</h5>
 <p></p></div>
 <div><h5>In-Class</h5>
-<p><strong>Field Guide: Interactive hardware and wearable devices</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
@@ -351,7 +341,7 @@ F = Fail (&lt; 70%)</p>
 <div><h5>Objectives</h5>
 <p></p></div>
 <div><h5>In-Class</h5>
-<p><strong>Field Guide: Immersive interactive experiences (museums, performances)</strong></p></div>
+</div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
@@ -359,8 +349,7 @@ F = Fail (&lt; 70%)</p>
 <h4>022:</h4>
 <div><h5>Objectives</h5>
 <p></p></div>
-<div><h5>In-Class</h5>
-<p><strong>Field Guide: Unity 2D &amp; 3D Gaming</strong></p></div>
+<div><h5>In-Class</h5></div>
 <div><h5>Reading Due</h5></div>
 <div><h5>Assignment Due</h5></div>
 <hr class="spacer">
