--- a/coursepolicies.html
+++ b/coursepolicies.html
@@ -61,7 +61,7 @@ F -	Fail
 
 <h4>Elon Honor Code</h4>
 
-<p>Elon's honor pledge calls for a commitment to Elon's shared values of Honesty, Integrity, Respect and Responsibility. To be clear about what constitutes violations of these values, students should be familiar with the Judicial Affairs policies in the student handbook, including violations outlined at <a href="http://www.elon.edu/e-web/students/handbook/violations/default.xhtml" target="_blank">http://www.elon.edu/e-web/students/handbook/violations/default.xhtml</a>.</p>
+<p>Elon's honor pledge calls for a commitment to Elon's shared values of Honesty, Integrity, Respect and Responsibility. To be clear about what constitutes violations of these values, students should be familiar with the Judicial Affairs policies in the student handbook, including violations outlined at <a href="http://www.elon.edu/e-web/students/handbook/honor.xhtml" target="_blank">http://www.elon.edu/e-web/students/handbook/honor.xhtml</a>.</p>
 
 <p>Students with questions about the specific interpretation of these values and violations as they relate to this course should contact this instructor immediately. Violations in academic-related areas will be documented in an incident report which will be maintained in the Office of Student Conduct, and may result in a lowering of the course grade and/or failure of the course with an Honor Code F.</p>
 
@@ -73,7 +73,7 @@ F -	Fail
 </p><p>
 All forms of dishonesty mentioned above may result in an F in a course and expulsion from the university. Although all of these are clear violations of the university Honor Code, plagiarism is a special concern for communications professionals and scholars.
 </p><p>
-What is plagiarism? It is using someone else's work such as passages, photographs, music, video, graphics and other images, and claiming it as your own. It can be copying work that has appeared in a journal, a magazine, a newspaper or online – anywhere, really – and presenting it as your own. Cutting and pasting passages from the Web into your work, for example, is plagiarism unless you credit the source of the material or images. Take this as your guiding principle: If you quote someone else's words or appropriate their image, attribute the source.
+What is plagiarism? It is using someone else's work such as passages, photographs, music, video, graphics and other images, and claiming it as your own. It can be copying work that has appeared in a journal, a magazine, a newspaper or online -- anywhere, really -- and presenting it as your own. Cutting and pasting passages from the Web into your work, for example, is plagiarism unless you credit the source of the material or images. Take this as your guiding principle: If you quote someone else's words or appropriate their image, attribute the source.
 </p><p>
 In brief, you may not adopt or reproduce the ideas, words or statements of another person without acknowledgment or attribution. In many cases, such work is copyrighted. 
 </p><p>
@@ -86,7 +86,7 @@ If you quote someone else's words or use information or material acquired or cre
 <h4>Elon Disabilities Services</h4>
 
 <p>If you are a student with a documented disability who will require accommodations in this course, please register with Disabilities Services in the Duke Building, Room 108 (278-6500), for assistance in developing a plan to address your academic needs.
-http://www.elon.edu/e-web/academics/support/disabilities_services.xhtml</p>
+<a href="http://www.elon.edu/e-web/academics/support/disabilities_services.xhtml" target="_blank">http://www.elon.edu/e-web/academics/support/disabilities_services.xhtml</a>.</p>
 
 <h4>Elon Writing Center</h4>
 
@@ -101,12 +101,12 @@ Sun 	2pm-10pm</p>
 <p>
 The Writing Center also staffs satellite Writing Centers in the Multicultural Center (Moseley 221-B) and in the Business School (see The Writing Center website for more details).
 </p><p>
-If you have questions, please contact The Writing Center Director, Dr. Paula Rosinski, at prosinski@elon.edu or X5842 or visit http://www.elon.edu/writingcenter.
+If you have questions, please contact The Writing Center Director, Dr. Paula Rosinski, at prosinski@elon.edu or X5842 or visit <a href="http://www.elon.edu/writingcenter" target="_blank">http://www.elon.edu/writingcenter</a>.
 </p>
 
 <h4>Religious Holidays Policies</h4>
 
-<p>In supporting religious diversity, Elon has a policy and procedures for students who wish to observe religious holidays that are in conflict with the academic calendar, allowing students an excused absence.  Students who wish to observe a holiday during the semester must complete the online Religious Observance Notification Form (RONF), available at http://www.elon.edu/e-web/students/religious_life/ReligiousHolidays.xhtml, within the first two weeks of the semester. </p><p>
+<p>In supporting religious diversity, Elon has a policy and procedures for students who wish to observe religious holidays that are in conflict with the academic calendar, allowing students an excused absence.  Students who wish to observe a holiday during the semester must complete the online Religious Observance Notification Form (RONF), available at <a href="http://www.elon.edu/e-web/students/religious_life/ReligiousHolidays.xhtml" target="_blank">http://www.elon.edu/e-web/students/religious_life/ReligiousHolidays.xhtml</a>, within the first two weeks of the semester. </p><p>
 This policy does not apply during the final examination period. Students are required to make prior arrangements with the instructor for completion of any work missed during the absence. Once the completed RONF is received, the Truitt Center will confirm the excused absence with notification to the instructor and the appropriate academic dean, along with a copy to the student.  Students may contact the Truitt Center staff with any questions (336-278-7729).</p>
 
 <h3>Student Options Related to Enrollment in this Course</h3>
@@ -119,13 +119,13 @@ This policy does not apply during the final examination period. Students are req
 
 <p>Students may drop a course during the designated drop/add period through their On-Track account. A course that is dropped during the designated drop/add period will not appear on the student's transcript or grade report.</p><p>
 
-After the designated drop/add period, students may withdraw from a course without penalty through the first half of the semester, following dates published in the academic calendar. Withdrawing from a course during this period will result in a mark of "W" that will appear on the student's academic transcript. Students may withdraw by using the online process located at http://www.elon.edu/e-web/administration/registrar/DropAddClassesOnline.xhtml
+After the designated drop/add period, students may withdraw from a course without penalty through the first half of the semester, following dates published in the academic calendar. Withdrawing from a course during this period will result in a mark of "W" that will appear on the student's academic transcript. Students may withdraw by using the online process located at <a href="http://www.elon.edu/e-web/administration/registrar/DropAddClassesOnline.xhtml" target="_blank">http://www.elon.edu/e-web/administration/registrar/DropAddClassesOnline.xhtml</a>.
 </p><p>
 NOTE: Students should not assume that they will be officially withdrawn from a course based on their failing to attend class or their notifying a faculty member of their intent to withdraw. The student has the responsible for following the official process of withdrawing from a class. Students who do not properly withdraw from a course will receive a grade of F.
 </p><p>
 Students may not withdraw from a course after the published deadline. Any exception to this policy is the responsibility of the appropriate academic dean's office. When granted, withdrawal from a course after this time will result in a grade of "W" or "F" depending on the student's grade at the time.
 </p><p>
-For additional information on university course policies, students should consult their Academic Catalog:  http://www.elon.edu/e-web/academics/catalog/
+For additional information on university course policies, students should consult their Academic Catalog:  <a href="http://www.elon.edu/e-web/academics/catalog/" target="_blank">http://www.elon.edu/e-web/academics/catalog/</a>.
 </p>
 
 </div> <!-- close id="container" -->
