add link to Github

--- a/com550syllabus.html
+++ b/com550syllabus.html
@@ -184,7 +184,7 @@ F = Fail (&lt; 70%)</p>
 
 <h4>005: September 09, 2014</h4>
 <div><h5>Objectives</h5>
-<p>Javascript</p></div>
+<p>Javascript [<a href="https://github.com/EloniMedia/im-producing/tree/master/code/scribblepad">Get code from Github</a>]</p></div>
 <div><h5>In-Class</h5><p>Codecademy: Functions Review &amp; Javascript 3</p></div>
 <div><h5>Reading Due</h5><p>Gliffy's <a href="https://www.gliffy.com/examples/index.php" target="_blank">different types of charts</a>. Also, <a href="http://users.csc.calpoly.edu/~jdalbey/SWE/pdl_std.html" target="_blank">pseudocode</a>. Also, Murray Chapter 2 (link above) pp. 80 - 82 related to pseudocode. And finally, <a href="http://speakingjs.com/es5/ch07.html" target="_blank">Chapter 7 in Speaking Javascript.</a></p></div>
 <div><h5>Assignment Due</h5><p>Codecademy "Functions"</div>
